# encryption-android

./: .gitignore
app/: build.gradle
app/src/androidTest/java/com/geetest/encryption/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/song/encryption/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  asn1.h  ec.h  encrypt.cpp  encrypt.h  evp.h  log.h  native-lib.cpp  testutil.h  utils.cpp  utils.h
app/src/main/cpp/aes/: aes.c  aes.h
app/src/main/cpp/base64/: base64.c  base64.h
app/src/main/cpp/blowfish/: bf_enc.c  bf_locl.h  bf_pi.h  bf_skey.c  blowfish.h  e_os2.h
app/src/main/cpp/sha256/: sha256.h
app/src/main/cpp/sm2/: asn1.h  asn1_local.h  asn1err.h  asn1t.h  bio.h  bioerr.h  bn.h  bnerr.h  buffer.h  buffererr.h  core.h  core_numbers.h  cryptlib.h  crypto.h  cryptoerr.h  e_os2.h  ec.h  ec_key.c  ec_local.h  ecerr.h  engine.h  err.h  evp.h  evperr.h  lhash.h  macros.h  objects.h  objectserr.h  opensslv.h  params.h  safestack.h  sm2.h  sm2_crypt.c  sm2_err.c  sm2_pmeth.c  sm2_sign.c  sm2err.h  stack.h  symhacks.h  tasn_dec.c  (+4 more)
app/src/main/cpp/sm3/: sm3.c  sm3.h  sm3_hmac.c
app/src/main/cpp/sm4/: cbc128.c  e_os2.h  modes_lcl.h  rotate.h  sms4.h  sms4_cbc.c  sms4_enc.c  sms4_lcl.h  sms4_setkey.c
app/src/main/cpp/sms2/: GM_sm2.cpp  GM_sm2.h  e_os2.h  tommath.h
app/src/main/java/com/geetest/encryption/: FileUtil.java  Gt3GMEncryption.java  HttpUtils.java  MainActivity.java
app/src/main/java/com/geetest/encryption/sm2/: BCECUtil.java  SM2Cipher.java  SM2Util.java
app/src/main/java/com/geetest/encryption/sm4/: GMBaseUtil.java  SM4Util.java
app/src/main/java/com/song/encryption/: FileUtil.java  GMBaseUtil.java  Gt3GMEncryption.java  HttpUtils.java  MainActivity.java  SM4Util.java
app/src/main/java/com/song/encryption/sm2/: BCECUtil.java  SM2Cipher.java  SM2Util.java
app/src/main/java/com/song/encryption/sm4/: GMBaseUtil.java  SM4Util.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/geetest/encryption/: ExampleUnitTest.java  GMBaseTest.java  SM2UtilTest.java  SM4UtilTest.java
app/src/test/java/com/song/encryption/: ExampleUnitTest.java  GMBaseTest.java  SM2UtilTest.java  SM4UtilTest.java
